# reminder-display

./: Cargo.toml  README.md  setup.sh  work_reminders.json
src/: lib.rs  main.rs  reminders.rs
tests/: reminder_tests.rs
tests/test_data/: sample_reminders.json
