[package]
name = "reminder-display"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.32"
egui = "0.32"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
notify = "8.2"
dirs = "6.0"

[dev-dependencies]
tempfile = "3.8"
